2007-07-08  Roger Leigh  <rleigh@debian.org>

	* bin/schroot/schroot-main-base.cc (run_impl): Call
	session::set_session_id with the session name specified in the
	user options.

	* bin/schroot/schroot-options.cc (add_options): Rename session to
	session_actions.  Add "--session-name" and "--force" options to
	session_options.

	* bin/schroot/schroot-options-base.cc (add_option_groups): Add
	separate session_actions and session_options groups in place of
	session.

	* bin/schroot/schroot-options-base.h (schroot): Add session_name
	member.  Split the session options_description into separate
	session_actions and session_options groups.

2007-07-08  Roger Leigh  <rleigh@debian.org>

	* bin/schroot/setup/50chrootname: Strip ISO-8601 date and pid from
	chroot names.

2007-07-08  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-session.cc: Add error message for SET_SESSION_ID
	error code.
	(run_impl): Log a warning message if a chroot does not support
	setting a session ID.  If the system does not support UUIDs, use
	the ISO-8601 date and PID instead.

	* sbuild/sbuild-session.h: Add a SET_SESSION_ID error code.

	* configure.ac: Add a HAVE_UUID macro.

2007-07-08  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-lock.cc: Add error messages for UNLOCK and
	UNLOCK_TIMEOUT error codes.  Rename second DEVICE_UNLOCK error
	message to DEVICE_UNLOCK_TIMEOUT.  The lock types are now
	exception-safe.
	(~file_lock): If the file is locked, release the lock.  Log a
	warning on error.
	(file_lock::set_lock): Set the locked member.  On unlock error,
	throw UNLOCK or UNLOCK_TIMEOUT.
	(~device_lock): If the device is locked, release the lock.  Log a
	warning on error.
	(device_lock::set_lock): Set the locked member.

	* sbuild/sbuild-lock.h: Add UNLOCK and UNLOCK_TIMEOUT error codes.
	Add locked members to file_lock and device_lock.

2007-07-08  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-types.cc
	(isodate::get_date_format): New method to format an ISO-8601 date.
